automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <body>
     <header>
-      <a></a>      
-      <a></a>
-      <a></a>
+      <a>New Questions</a>
+      <a>About</a>
+      <h3><a>Icebreakers</a></h3>
 
     </header>
   </body>
