--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
   <body>
     <header>
-      <a>New Questions</a>
-      <a>About</a>
-      <h3><a>Icebreakers</a></h3>
-
+      <nav>
+        <a>New Questions</a>
+        <a>About</a>
+        <h3><a>Icebreakers</a></h3>
+      </nav>
     </header>
   </body>
 </html>
