automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header>
       <nav>
       <ul>
-        <a>New Questions</a>
-        <a>About</a>
-        <h3><a>Icebreakers</a></h3>
+        <li><a>New Questions</a></li>
+        <li><a>About</a></li>
+        <li><h3><a>Icebreakers</a></h3></li>
       </ul>
       </nav>
     </header>
