--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a>New Questions</a></li>
         <li><a>About</a></li>
-        <li><h3><a>Icebreakers</a></h3></li>
+        <h3><a>Icebreakers</a></h3>
       </ul>
       </nav>
     </header>
