--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <h3><a>Icebreakers</a></h3>
+        <h3>Icebreakers</h3>
       <ul>
         <li><a>New Questions</a></li>
         <li><a>About</a></li>
